# swarm-contrastive-decomposition

./: .gitignore  CITATION.cff  LICENSE  README.md  decomposition.yml  main.py  pyproject.toml  requirements.txt  run.py  setup.py
config/: structures.py
models/: scd.py  timestamping.py
processing/: postprocess.py  preprocess.py
scd/: __init__.py  configs.json  train.py
scd/config/: __init__.py  structures.py
scd/models/: __init__.py  scd.py  timestamping.py
scd/processing/: __init__.py  postprocess.py  preprocess.py
scd/utils/: plotting.py
swarm_contrastive_decomposition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: plotting.py
