[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-contrastive-decomposition"
version = "0.1.0"
description = "Decomposition of Neurophysiological Time Series Signals with a Particle Swarm Optimised Independence Estimator"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Agnese Grison", email = "agnese.grison16@imperial.ac.uk"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["EMG", "neural signals", "decomposition", "particle swarm", "ICA", "blind source separation"]

dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "mat73>=0.59",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/AgneGris/swarm-contrastive-decomposition"
Repository = "https://github.com/AgneGris/swarm-contrastive-decomposition"
Issues = "https://github.com/AgneGris/swarm-contrastive-decomposition/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scd*"]

[tool.setuptools.package-data]
scd = ["*.json"]